@@ -1,4 +1,4 @@
-package rs.edu.raf.exchangeservice.historyServiceTests;
+package rs.edu.raf.exchangeservice;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -7,9 +7,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
 import rs.edu.raf.exchangeservice.domain.model.listing.Ticker;
 import rs.edu.raf.exchangeservice.domain.model.history.StockDaily;
@@ -18,10 +15,10 @@ import rs.edu.raf.exchangeservice.repository.historyRepository.StockDailyReposit
 import rs.edu.raf.exchangeservice.service.historyService.StockDailyService;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -43,36 +40,47 @@ public class StockDailyServiceTest {
     public void testLoadData() throws Exception {
         // Arrange
         Ticker ticker = new Ticker();
-        ticker.setTicker("TEST");
+        ticker.setTicker("A");
         when(tickerRepository.findAll()).thenReturn(Arrays.asList(ticker));
 
         // Act
         stockDailyService.loadData();
 
         // Assert
-        verify(stockDailyRepository, times(0)).save(any(StockDaily.class));
+        /*erify(stockMonthlyRepository, times(61)).save(any(StockMonthly.class));*/
+        verify(stockDailyRepository, atLeastOnce()).save(any(StockDaily.class));
     }
 
     @Test
     public void testFindByTicker() {
         // Arrange
-        when(stockDailyRepository.findByTicker(anyString())).thenReturn(Collections.emptyList());
+        Ticker ticker = new Ticker();
+        ticker.setTicker("A");
+        StockDaily stock = new StockDaily();
+        stock.setTicker(ticker.getTicker());
+        StockDaily stock1 = new StockDaily();
+        stock.setTicker(ticker.getTicker());
+        // Arrange
+        when(stockDailyRepository.findByTicker(ticker.getTicker())).thenReturn(List.of(stock, stock1));
+
 
         // Act
-        stockDailyService.findByTicker("TEST");
+        List<StockDaily> list = stockDailyRepository.findByTicker("A");
 
-        // Assert
-        verify(stockDailyRepository, times(1)).findByTicker("TEST");
+
+        assertEquals(2, list.size());
+        assertEquals(stock, list.get(0));
+        assertEquals(stock1, list.get(1));
     }
 
     @Test
     public void testSaveData() throws Exception {
-        // Arrange
         ObjectMapper objectMapper = new ObjectMapper();
         JsonNode jsonNode = objectMapper.readTree("{ \"2022-01-01\": { \"2. high\": \"100.0\" } }");
+        when(stockDailyRepository.save(any(StockDaily.class))).thenReturn(new StockDaily());
 
         // Act
-        stockDailyService.saveData(jsonNode, "TEST");
+        stockDailyService.saveData(jsonNode, "A");
 
         // Assert
         verify(stockDailyRepository, times(1)).save(any(StockDaily.class));
